// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getDependencyTree > correctly obtains dependency tree 1`] = `
{
  "dependencies": {
    "package1": {
      "dependencies": {
        "instrumented": {
          "overridden": false,
          "version": "1.0.0",
        },
      },
      "overridden": false,
      "resolved": "file:../package1",
      "version": "1.0.0",
    },
    "package2": {
      "overridden": false,
      "resolved": "file:../package2",
      "version": "1.0.0",
    },
  },
  "name": "basic-monorepo",
  "version": "1.0.0",
}
`;

exports[`getDependencyTree > correctly obtains dependency tree for nested dep 1`] = `
{
  "dependencies": {
    "intermediate": {
      "dependencies": {
        "deeply-nested": {
          "dependencies": {
            "instrumented": {
              "overridden": false,
              "version": "1.0.0",
            },
          },
          "overridden": false,
          "version": "1.0.0",
        },
      },
      "overridden": false,
      "version": "1.0.0",
    },
  },
  "name": "hoisted-deeply-nested-deps",
  "version": "1.0.0",
}
`;
